Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38113

tst_QComplexText breaks with HarfbuzzNG on Mac OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 RC1
    • 5.3.0 Beta1
    • GUI: Text handling
    • None
    • macOS
    • 118494aeda916a63dd94474442f9dbf7b2ad7ff5, 05cfb6cd09eb27f960362c077855959835dae88c, ce0d3f4e72af11775e3591f831283469d6a0c4ce

      HarfbuzzNG is required on Mac, but currently it can't be enabled due to a test failure.

        For Gerrit Dashboard: QTBUG-38113
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes